--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "roblox-follow-bot",
+  "name": "roblox-bot",
   "version": "1.0.0",
+  "description": "A bot that joins a Roblox game",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "dotenv": "^16.3.1"
   }
 }
